Assertion when Grease Pencil object is deleted using collections window #60880

Closed
opened 2019-01-25 21:15:10 +01:00 by 321test123 · 10 comments

System Information
Operating system: Win7x64
Graphics card: Radeon HD7850

Blender Version
Broken: 2.80, 2018.01.25, builded debug version

Short description of error
Assertion when Grease Pencil object is deleted using collections window

Exact steps for others to reproduce the error
Based on the default startup:

  1. Add Grease Pencil, Blank object
  2. Go to Draw mode
  3. Draw some lines
  4. Delete Grease Pencil object using collections window (see attached picture)
  5. Click in 3D window
  6. Assertion fail happen

assertion.jpg

**System Information** Operating system: Win7x64 Graphics card: Radeon HD7850 **Blender Version** Broken: 2.80, 2018.01.25, builded debug version **Short description of error** Assertion when Grease Pencil object is deleted using collections window **Exact steps for others to reproduce the error** Based on the default startup: 1. Add Grease Pencil, Blank object 2. Go to Draw mode 3. Draw some lines 4. Delete Grease Pencil object using collections window (see attached picture) 5. Click in 3D window 6. Assertion fail happen ![assertion.jpg](https://archive.blender.org/developer/F6403106/assertion.jpg)
Author

Added subscriber: @321test123

Added subscriber: @321test123
Member

Added subscriber: @CharlieJolly

Added subscriber: @CharlieJolly
Member

Confirmed.

blender.exe!abort() Line 61	at minkernel\crts\ucrt\src\appcrt\startup\abort.cpp(61)
> blender.exe!WM_toolsystem_ref_from_context(bContext * C=0x0000025fb1564288) Line 86	....\blender\source\blender\windowmanager\intern\wm_toolsystem.c(86)

blender.exe!WM_toolsystem_runtime_from_context(bContext * C=0x0000025fb1564288) Line 93	....\blender\source\blender\windowmanager\intern\wm_toolsystem.c(93)
blender.exe!WM_toolsystem_active_tool_is_brush(const bContext * C=0x0000025fb1564288) Line 872	....\blender\source\blender\windowmanager\intern\wm_toolsystem.c(872)
blender.exe!gp_brush_cursor_poll(bContext * C=0x0000025fb1564288) Line 1615	....\blender\source\blender\editors\gpencil\gpencil_utils.c(1615)
blender.exe!wm_paintcursor_tag(bContext * C=0x0000025fb1564288, wmPaintCursor * pc=0x0000025fd070f8f8, ARegion * ar=0x0000025fd0afeaa8) Line 2778	....\blender\source\blender\windowmanager\intern\wm_event_system.c(2778)
blender.exe!wm_paintcursor_test(bContext * C=0x0000025fb1564288, const wmEvent * event=0x0000025fd0c84c68) Line 2799	....\blender\source\blender\windowmanager\intern\wm_event_system.c(2799)
blender.exe!wm_event_do_handlers(bContext * C=0x0000025fb1564288) Line 3038	....\blender\source\blender\windowmanager\intern\wm_event_system.c(3038)
blender.exe!WM_main(bContext * C=0x0000025fb1564288) Line 430	....\blender\source\blender\windowmanager\intern\wm.c(430)

Confirmed. ``` blender.exe!abort() Line 61 at minkernel\crts\ucrt\src\appcrt\startup\abort.cpp(61) > blender.exe!WM_toolsystem_ref_from_context(bContext * C=0x0000025fb1564288) Line 86 ....\blender\source\blender\windowmanager\intern\wm_toolsystem.c(86) blender.exe!WM_toolsystem_runtime_from_context(bContext * C=0x0000025fb1564288) Line 93 ....\blender\source\blender\windowmanager\intern\wm_toolsystem.c(93) blender.exe!WM_toolsystem_active_tool_is_brush(const bContext * C=0x0000025fb1564288) Line 872 ....\blender\source\blender\windowmanager\intern\wm_toolsystem.c(872) blender.exe!gp_brush_cursor_poll(bContext * C=0x0000025fb1564288) Line 1615 ....\blender\source\blender\editors\gpencil\gpencil_utils.c(1615) blender.exe!wm_paintcursor_tag(bContext * C=0x0000025fb1564288, wmPaintCursor * pc=0x0000025fd070f8f8, ARegion * ar=0x0000025fd0afeaa8) Line 2778 ....\blender\source\blender\windowmanager\intern\wm_event_system.c(2778) blender.exe!wm_paintcursor_test(bContext * C=0x0000025fb1564288, const wmEvent * event=0x0000025fd0c84c68) Line 2799 ....\blender\source\blender\windowmanager\intern\wm_event_system.c(2799) blender.exe!wm_event_do_handlers(bContext * C=0x0000025fb1564288) Line 3038 ....\blender\source\blender\windowmanager\intern\wm_event_system.c(3038) blender.exe!WM_main(bContext * C=0x0000025fb1564288) Line 430 ....\blender\source\blender\windowmanager\intern\wm.c(430) ```

Added subscribers: @ideasman42, @antoniov

Added subscribers: @ideasman42, @antoniov
Campbell Barton was assigned by Antonio Vazquez 2019-01-25 22:45:58 +01:00

@ideasman42 Could you take a look to the toolsystem assert?

@ideasman42 Could you take a look to the toolsystem assert?
Member

Added subscriber: @zazizizou

Added subscriber: @zazizizou
Member

My suggestion for a fix: D4399

My suggestion for a fix: [D4399](https://archive.blender.org/developer/D4399)

Note, this is a more general problem. Deleting a mesh in weight paint mode for example, doesn't update the active tool.

Note, this is a more general problem. Deleting a mesh in weight paint mode for example, doesn't update the active tool.

This issue was referenced by 012483b6e4

This issue was referenced by 012483b6e4a1453c3e990127db001617997a9d64

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60880
No description provided.