Fix T60880: Assert deleting grease pencil object from outliner